--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ ExportedObj/
 *.pdb
 
 # Unity3D generated meta files
-*.pidb.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
@@ -113,7 +112,7 @@ artifacts/
 *_p.c
 *_i.h
 *.ilk
-*.meta
+#*.meta
 *.obj
 *.pch
 *.pdb
